[package]
name = "routing"
version = "0.1.0"
edition = "2021"
default-run = "routing"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun2 = { version = "1.2.3", features = ["async"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.79"
futures = "0.3.30"
tokio-util = "0.7.10"
ctrlc2 = "3.5"
ipstack = {path = "./ipstack"}

#[target.'cfg(target_os = "windows")'.dependencies]
#windows = "0.54.0"